force-app/main/default/objects/Partner_Quickview__c/Partner_Quickview__c.object-meta.xml
<CustomObject>
    <description>To track  the new NCR Interact Partner Program</description>
    <label>Partner Quickview</label>
    <nameField>
        <label>Partner Quickview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Quickview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>