force-app/main/default/objects/Partner_Quickview__c/fields/ATM_Date_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>ATM_Date_of_Purchase__c</fullName>
    <inlineHelpText>Enter the date the demo equipment was purchased.</inlineHelpText>
    <label>ATM Date of Purchase</label>
    <type>Date</type>
</CustomField>