force-app/main/default/objects/Partner_Quickview__c/fields/ATM_Domain_Exp_Complete__c.field-meta.xml
<CustomField>
    <fullName>ATM_Domain_Exp_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATM Domain Exp Complete</label>
    <type>Checkbox</type>
</CustomField>