force-app/main/default/objects/Partner_Quickview__c/fields/Authorized_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Solutions__c</fullName>
    <label>Authorized Solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>