force-app/main/default/objects/Partner_Quickview__c/fields/Branch_Automation_Demo_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Branch_Automation_Demo_Capabilities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the partner has purchased demo equipment.</inlineHelpText>
    <label>Branch Automation Demo Capabilities</label>
    <type>Checkbox</type>
</CustomField>