force-app/main/default/objects/Partner_Quickview__c/fields/Branch_Automation_Spec_Complete__c.field-meta.xml
<CustomField>
    <fullName>Branch_Automation_Spec_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked indicates partner has met the requirements for this specialization</inlineHelpText>
    <label>Branch Automation Spec Complete</label>
    <type>Checkbox</type>
</CustomField>