force-app/main/default/objects/Partner_Quickview__c/fields/Competitive_Offerings__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Offerings__c</fullName>
    <label>Competitive Offerings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>