force-app/main/default/objects/Partner_Quickview__c/fields/Converged_Channel_Date_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Converged_Channel_Date_of_Purchase__c</fullName>
    <inlineHelpText>Enter the date the demo equipment was purchased.</inlineHelpText>
    <label>Converged Channel Date of Purchase</label>
    <type>Date</type>
</CustomField>