force-app/main/default/objects/Partner_Quickview__c/fields/Converged_Channel_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Converged_Channel_Product_Discount__c</fullName>
    <inlineHelpText>Product discount for financial products.</inlineHelpText>
    <label>Converged Channel Product Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>