force-app/main/default/objects/Partner_Quickview__c/fields/European_Union__c.field-meta.xml
<CustomField>
    <fullName>European_Union__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this partner is operating in an EU country.</inlineHelpText>
    <label>European Union</label>
    <type>Checkbox</type>
</CustomField>