force-app/main/default/objects/Partner_Quickview__c/fields/Hardware_Commission__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Commission__c</fullName>
    <inlineHelpText>Percent of commission paid to partner for hardware maintenance.</inlineHelpText>
    <label>Hardware Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>