force-app/main/default/objects/Partner_Quickview__c/fields/ISV__c.field-meta.xml
<CustomField>
    <fullName>ISV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISV</label>
    <type>Checkbox</type>
</CustomField>