force-app/main/default/objects/Partner_Quickview__c/fields/Leadership_Description__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Description__c</fullName>
    <inlineHelpText>Provide additional detail on the thought leadership, awards and recognition the partner has received.</inlineHelpText>
    <label>Leadership Description</label>
    <type>TextArea</type>
</CustomField>