force-app/main/default/objects/Partner_Quickview__c/fields/NCR_com__c.field-meta.xml
<CustomField>
    <fullName>NCR_com__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCR.com</label>
    <type>Checkbox</type>
</CustomField>