force-app/main/default/objects/Partner_Quickview__c/fields/Partner_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Level__c</fullName>
    <label>Partner Program Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>