force-app/main/default/objects/Partner_Quickview__c/fields/Partner_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Partner_Vertical__c</fullName>
    <label>Partner Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>