force-app/main/default/objects/Partner_Quickview__c/fields/Payments_Cert_Met__c.field-meta.xml
<CustomField>
    <fullName>Payments_Cert_Met__c</fullName>
    <label>Payments Cert Met</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>