force-app/main/default/objects/Partner_Quickview__c/fields/Payments_Domain_Exp_Complete__c.field-meta.xml
<CustomField>
    <fullName>Payments_Domain_Exp_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments Domain Exp Complete</label>
    <type>Checkbox</type>
</CustomField>