force-app/main/default/objects/Partner_Quickview__c/fields/Payments_Spec_Complete__c.field-meta.xml
<CustomField>
    <fullName>Payments_Spec_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked indicates partner has met the requirements for this specialization</inlineHelpText>
    <label>Payments Spec Complete</label>
    <type>Checkbox</type>
</CustomField>