force-app/main/default/objects/Partner_Quickview__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>Account_Name__r.Primary_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>