force-app/main/default/objects/Partner_Quickview__c/fields/Retail_Partner_Lab__c.field-meta.xml
<CustomField>
    <fullName>Retail_Partner_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Partner Lab</label>
    <type>Checkbox</type>
</CustomField>