force-app/main/default/objects/Partner_Quickview__c/fields/Sales_Methology_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Methology_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the partner is using an opportunity management system.</inlineHelpText>
    <label>Sales Methology Assessment</label>
    <type>Checkbox</type>
</CustomField>