force-app/main/default/objects/Partner_Quickview__c/fields/Self_Serv_Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Self_Serv_Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the partner has provided a case study specific to the financial industry.</inlineHelpText>
    <label>Self Serv Case Study</label>
    <type>Checkbox</type>
</CustomField>