force-app/main/default/objects/Partner_Quickview__c/fields/Self_Serv_Customer_Testimonials__c.field-meta.xml
<CustomField>
    <fullName>Self_Serv_Customer_Testimonials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the partner has provided customer testimonials specific to the financial industry.</inlineHelpText>
    <label>Self Serv Customer Testimonials</label>
    <type>Checkbox</type>
</CustomField>