force-app/main/default/objects/Partner_Quickview__c/fields/Service_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Partner_ID__c</fullName>
    <inlineHelpText>Service Partner ID assigned to the partner for Diagnostic issuance.</inlineHelpText>
    <label>Service Partner ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>