force-app/main/default/objects/Partner_Quickview__c/fields/Services_Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Services_Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the partner has provided a case study specific to the services industry.</inlineHelpText>
    <label>Services Case Study</label>
    <type>Checkbox</type>
</CustomField>