force-app/main/default/objects/Partner_Quickview__c/fields/Services_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Services_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Program manager assigned to partner for service related support.</inlineHelpText>
    <label>Services Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Quickview</relationshipName>
    <type>Lookup</type>
</CustomField>