force-app/main/default/objects/Partner_Quickview__c/fields/Services_Specializations__c.field-meta.xml
<CustomField>
    <fullName>Services_Specializations__c</fullName>
    <label>Services Specializations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Services</fullName>
            </value>
            <value>
                <fullName>Software Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>