force-app/main/default/objects/Partner_Quickview__c/fields/Store_Automation_Cert_Met__c.field-meta.xml
<CustomField>
    <fullName>Store_Automation_Cert_Met__c</fullName>
    <label>Store Automation Cert Met</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>