force-app/main/default/objects/Partner_Quickview__c/fields/SW_Maint_Serv_Disc_Partner_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>SW_Maint_Serv_Disc_Partner_Invoiced__c</fullName>
    <inlineHelpText>Percent discount for software maintenance performed by NCR and invoiced to partner.</inlineHelpText>
    <label>SW Maint Serv Disc (Partner Invoiced)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>