force-app/main/default/objects/Partner_Quickview__c/fields/Thought_Leadership_Awards_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Thought_Leadership_Awards_Recognition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the partner has displayed industry leadership, published a paper, been honored awards or recognized by their peers.</inlineHelpText>
    <label>Thought Leadership, Awards, Recognition</label>
    <type>Checkbox</type>
</CustomField>