force-app/main/default/objects/Partner_Quickview__c/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <description>Distributor</description>
    <label>Distributor</label>
</RecordType>