force-app/main/default/objects/Partner_Quickview__c/recordTypes/Managed_Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>Managed_Service_Provider</fullName>
    <active>true</active>
    <description>Managed Service Provider</description>
    <label>Managed Service Provider</label>
</RecordType>