force-app/main/default/objects/Partner_Quickview__c/recordTypes/Solution_Provider.recordType-meta.xml
<RecordType>
    <fullName>Solution_Provider</fullName>
    <active>true</active>
    <description>Solution Provider</description>
    <label>Solution Provider</label>
</RecordType>