force-app/main/default/objects/Partner_Quickview__c/validationRules/Percent_fields_should_not_exceed_100_APD.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_fields_should_not_exceed_100_APD</fullName>
    <active>true</active>
    <description>Percentage  should not exceed 100%</description>
    <errorConditionFormula>(ATM_Product_Discount__c)&gt;1.00</errorConditionFormula>
    <errorDisplayField>ATM_Product_Discount__c</errorDisplayField>
    <errorMessage>Percentage  should not exceed 100%</errorMessage>
</ValidationRule>