force-app/main/default/objects/Partner_Quickview__c/validationRules/Percent_fields_should_not_exceed_100_BAP.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_fields_should_not_exceed_100_BAP</fullName>
    <active>true</active>
    <description>Percentage  should not exceed 100%</description>
    <errorConditionFormula>(Branch_Automation_Product_Discount__c )&gt;1.00</errorConditionFormula>
    <errorDisplayField>Branch_Automation_Product_Discount__c</errorDisplayField>
    <errorMessage>Percentage  should not exceed 100%</errorMessage>
</ValidationRule>