force-app/main/default/objects/Partner_Quickview__c/validationRules/Percent_fields_should_not_exceed_100_HPI.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_fields_should_not_exceed_100_HPI</fullName>
    <active>true</active>
    <description>Percentage  should not exceed 100%</description>
    <errorConditionFormula>HW_Maint_Serv_Disc_Partner_Invoiced__c &gt;1.00</errorConditionFormula>
    <errorDisplayField>HW_Maint_Serv_Disc_Partner_Invoiced__c</errorDisplayField>
    <errorMessage>Percentage  should not exceed 100%</errorMessage>
</ValidationRule>