force-app/main/default/objects/Partner_Quickview__c/validationRules/Percent_fields_should_not_exceed_100_HWC.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_fields_should_not_exceed_100_HWC</fullName>
    <active>true</active>
    <description>Percentage  should not exceed 100%</description>
    <errorConditionFormula>( Hardware_Commission__c )&gt;1.00</errorConditionFormula>
    <errorDisplayField>Hardware_Commission__c</errorDisplayField>
    <errorMessage>Percentage  should not exceed 100%</errorMessage>
</ValidationRule>